--- a/index.html
+++ b/index.html
@@ -71,13 +71,14 @@
             />
           </div>
           <div>
-            <p>Tokyo, Japanfor the culture, food, and city energy.</p>
-            <p>
+            <h2>Tokyo, Japan</h2>
+            <p class="location-p">for the culture, food, and city energy.</p>
+            <p class="location-p">
               Tokyo seems exciting because it mixes old traditions with bright,
-              <br />modern city life. I want to try the food, see famous places,
-              and experience how <br />busy and lively the city feels.
+              modern city life. I want to try the food, see famous places, and
+              experience how busy and lively the city feels.
             </p>
-            <button>learn more</button>
+            <a href="tokyo.html"><button>learn more</button></a>
           </div>
         </div>
 
@@ -93,13 +94,14 @@
             />
           </div>
           <div>
-            <p>Tokyo, Japanfor the culture, food, and city energy.</p>
-            <p>
-              Tokyo seems exciting because it mixes old traditions with bright,
-              <br />modern city life. I want to try the food, see famous places,
-              and experience how <br />busy and lively the city feels.
+            <h2>Paris, France</h2>
+            <p class="location-p">mainly for the art and landmarks.</p>
+            <p class="location-p">
+              Paris feels beautiful and full of history, with museums, famous
+              buildings, and charming streets. I want to see the sights, enjoy
+              the cafés, and experience its relaxed atmosphere.
             </p>
-            <button>learn more</button>
+            <a href="paris.html"><button>learn more</button></a>
           </div>
         </div>
         <!-- Bali Card-->
@@ -114,32 +116,25 @@
             />
           </div>
           <div>
-            <p>Tokyo, Japanfor the culture, food, and city energy.</p>
-            <p>
-              Tokyo seems exciting because it mixes old traditions with bright,
-              <br />modern city life. I want to try the food, see famous places,
-              and experience how <br />busy and lively the city feels.
+            <h2>Bali, Indonesia</h2>
+            <p class="location-p">
+              because the scenery looks peaceful and relaxing.
             </p>
-            <button>learn more</button>
+            <p class="location-p">
+              Bali seems calm and welcoming, with beaches, rice terraces, and
+              nature everywhere. I want to enjoy the scenery, slow down, and see
+              what everyday life is like there.
+            </p>
+            <a href="bali.html"><button>learn more</button></a>
           </div>
         </div>
-        <ul>
-          <li>
-            <a href="paris.html">Paris, France</a> mainly for the art and
-            landmarks.
-          </li>
-          <li>
-            <a href="bali.html">Bali, Indonesia</a> because the scenery looks
-            peaceful and relaxing.
-          </li>
-        </ul>
 
-        <p>
+        <p class="location-p">
           Start with my first destination here:
           <a href="tokyo.html">My Tokyo Trip Page</a>
         </p>
 
-        <p>
+        <p class="location-p">
           Beyond these places, there are dozens of other locations on my list:
           bustling cities, quiet coastal towns, and mountain villages. As I
           learn more, I’ll keep expanding this site with notes, resources, and
