updated site to match feedback

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
           alt="Logo: Airplane flying around a globe"
           width="120px"
           height="120px"
-          class="nav-logo"
         />
         <ul class="nav-list">
           <li><a href="tokyo.html">Tokyo</a></li>
@@ -55,8 +54,7 @@
           </p>
         </div>
       </section>
-      <section id="top-places">
-        <div class="top-places-box">
+        <section id="top-places" class="top-places">
           <h2>Top Places I Want to Visit</h2>
 
           <p>
@@ -65,14 +63,12 @@
           </p>
 
           <p>
-            Beyond these places, there are dozens of other locations on my
-            list:<br />
-            bustling cities, quiet coastal towns, and mountain villages. As I
-            <br />
+            Beyond these places, there are dozens of other locations on my list:
+            bustling cities, quiet coastal towns, and mountain villages. <br /> As I
             learn more, I’ll keep expanding this site with notes, resources, and
             wish-lists.
           </p>
-        </div>
+        </section>
         <!-- location cards to add a little more information to the site.-->
         <!-- Tokyo Card-->
         <div class="location-card">
