--- a/tokyo.html
+++ b/tokyo.html
@@ -16,7 +16,6 @@
           alt="Logo: Airplane flying around a globe"
           width="120px"
           height="120px"
-          class="nav-logo"
         />
         <ul class="nav-list">
           <li><a href="index.html">Home</a></li>
@@ -33,14 +32,26 @@
 
     <!-- Flexbox page layout for Tokyo details -->
     <main>
-      <div class="page-header">
+      <div class="hero">
         <img
           src="tokyo.jpg"
           alt="Tokyo cityscape with Mount Fuji in the background"
-          class="tokyo-image"
+          class="hero-image"
         />
         <h1>My Tokyo Travel Plans</h1>
       </div>
+      <!-- Trip over view block -->
+      <section class="trip-overview">
+        <h2>Trip Overview</h2>
+        <p>
+          I would like to spend about a week in Tokyo exploring both busy areas
+          and quiet local neighborhoods. My trip would include seeing iconic
+          places like Shibuya Crossing, historic temples, themed shops, and
+          late-night food spots. I want to experience the fast energy of the
+          city while still finding peaceful parks and smaller streets where
+          everyday life happens.
+        </p>
+      </section>
       <div class="tokyo-layout">
         <section class="tokyo-column">
           <h2>Why Tokyo?</h2>
@@ -78,12 +89,33 @@
             everyday lives.
           </p>
 
-          <h3>Sample Day Plan</h3>
+          <h3>What My Perfect Day in Tokyo Looks Like</h3>
           <p>
             Morning in Asakusa, afternoon in Akihabara, and an evening walk
             through Shinjuku before heading back to the hotel. And maybe a
             late-night bowl of ramen.
           </p>
+        </section>
+        <section>
+          <h2>Tokyo Moments</h2>
+          <div class="photo-grid">
+            <img
+              src="tokyo-street.jpg"
+              alt="Tokyo street at night lit by neon signs"
+            />
+            <img
+              src="tokyo-temple.jpg"
+              alt="Temple area in Tokyo with lanterns and visitors"
+            />
+            <img
+              src="tokyo-ramen.jpg"
+              alt="A bowl of ramen on a wooden counter"
+            />
+            <img
+              src="tokyo-akihabara.jpg"
+              alt="Akihabara street with colorful anime billboards"
+            />
+          </div>
         </section>
       </div>
     </main>
