finished tokyo page.

--- a/tokyo.html
+++ b/tokyo.html
@@ -96,28 +96,29 @@
             late-night bowl of ramen.
           </p>
         </section>
-        <section>
+      </div>
+         <!-- Tried to make it fun with photos/grid adding different sized images -->
+        <section class="photo-section">
           <h2>Tokyo Moments</h2>
           <div class="photo-grid">
             <img
-              src="tokyo-street.jpg"
+              src="/Images/tokyo/Tokyo-Street.jpg"
               alt="Tokyo street at night lit by neon signs"
             />
             <img
-              src="tokyo-temple.jpg"
+              src="/Images/tokyo/Tokyo-Temple.jpg"
               alt="Temple area in Tokyo with lanterns and visitors"
             />
             <img
-              src="tokyo-ramen.jpg"
+              src="/Images/tokyo/Tokyo-Ramen.jpg"
               alt="A bowl of ramen on a wooden counter"
             />
             <img
-              src="tokyo-akihabara.jpg"
+              src="/Images/tokyo/Tokyo-Akihabara.jpg"
               alt="Akihabara street with colorful anime billboards"
             />
           </div>
         </section>
-      </div>
     </main>
 
     <footer>
