added some paris photos.

--- a/paris.html
+++ b/paris.html
@@ -39,6 +39,7 @@
           class="hero-image"
         />
         <h1>Dreaming of Paris</h1>
+      
       </div>
       <section class="trip-overview">
         <h2>Trip Overview</h2>
@@ -53,14 +54,11 @@
 
       <!-- CSS Grid-->
       <section class="paris-grid">
-        <article class="paris-card">
-          <h2 class="paris-h2">Landmarks</h2>
-          <p>
-            The Eiffel Tower, the Louvre, Notre-Dame, and the Arc de Triomphe
-            are classic spots. I’d love to see them, but also find lesser-known
-            corners of the city.
-          </p>
-        </article>
+       <section class="paris-card with-image">
+          <img src="Images/paris/paris-landmark.jpg" alt="Eiffel Tower" class="card-side-img">
+          <h3>Landmarks</h3>
+          <p>The Eiffel Tower, the Louvre, Notre-Dame...</p>
+       </section>
 
         <article class="paris-card">
           <h2 class="paris-h2">Cafes & Bakeries</h2>
