Finished Paris Page

--- a/paris.html
+++ b/paris.html
@@ -54,32 +54,66 @@
 
       <!-- CSS Grid-->
       <section class="paris-grid">
-       <section class="paris-card with-image">
-          <img src="Images/paris/paris-landmark.jpg" alt="Eiffel Tower" class="card-side-img">
+        <section class="paris-highlights">
+        <article class="highlight-card">
+          <img
+            src="Images/paris/paris-landmark.jpg"
+            alt="The Eiffel Tower and surrounding park"
+          />
           <h3>Landmarks</h3>
-          <p>The Eiffel Tower, the Louvre, Notre-Dame...</p>
-       </section>
-
-        <article class="paris-card">
-          <h2 class="paris-h2">Cafes & Bakeries</h2>
           <p>
-            Coffee with a view of the street, fresh baguettes, croissants, and
-            desserts lined up behind glass — spending a quiet morning in a
-            Parisian cafe is high on my list.
+            The Eiffel Tower, the Louvre, Notre-Dame, and the Arc de Triomphe are
+            classic stops. I’d love to see them, but also find smaller plazas and
+            quiet viewpoints that aren’t crowded with tourists.
           </p>
         </article>
 
-        <article class="paris-card">
-          <h2 class="paris-h2">Neighborhood Walks</h2>
+        <article class="highlight-card">
+          <img
+            src="Images/paris/paris-cafe.jpg"
+            alt="Outdoor Paris café with people sitting at small tables"
+          />
+          <h3>Cafés & Bakeries</h3>
+          <p>
+            Coffee with a view of the street, fresh baguettes, croissants, and
+            desserts lined up behind glass spending a slow morning in a Parisian
+            café is high on my list.
+          </p>
+        </article>
+
+        <article class="highlight-card">
+          <img
+            src="Images/paris/paris-street.jpg"
+            alt="Narrow Paris street with apartments and balconies"
+          />
+          <h3>Neighborhood Walks</h3>
           <p>
             From Montmartre to the Latin Quarter, I want to wander through
-            neighborhoods to get a sense of how people live, not just where
-            tourists go.
+            neighborhoods to see everyday life: balconies, flower boxes, small
+            shops, and winding streets.
+          </p>
+        </article>
+
+        <article class="highlight-card">
+          <img
+            src="Images/paris/paris-seine.jpg"
+            alt="Paris bridge over the Seine at sunset"
+          />
+          <h3>Evening Views</h3>
+          <p>
+            In the evenings, I imagine walking along the Seine, listening to street
+            music, and watching the city lights reflect on the water and bridges.
           </p>
         </article>
       </section>
-
-      <section>
+       <section class="dream-line">
+        <p>
+          If I ever make it there, I want simple days walking along the river,
+          reading on a bench, trying pastries, and watching life unfold from café
+          windows.
+        </p>
+      </section>
+           <section class="long-notes">
         <h2>Longer-Term Travel Notes</h2>
         <p>
           I don’t have firm plans to visit Paris yet, but I’m slowly gathering
@@ -90,7 +124,7 @@
         <p>
           For now, this section is a place for rough notes, half-formed plans,
           and inspiration — enough text to keep the page full and readable while
-          I keep researching.
+          I keep researching and dreaming about a future trip.
         </p>
       </section>
     </main>
