Working on Bali

--- a/bali.html
+++ b/bali.html
@@ -50,38 +50,77 @@
           scenery at my own pace.
         </p>
       </section>
-      <p>
-        Bali is known for its beaches, temples, art, and peaceful atmosphere.
-        It's a place I imagine visiting when I want a mix of relaxation, nature,
-        and unique cultural experiences.
-      </p>
+       <section class="bali-layout">
+        <article class="bali-column">
+          <h2>Why Bali?</h2>
+          <p>
+            Bali is known for its beaches, temples, art, and peaceful
+            atmosphere. It’s a place I imagine visiting when I want a mix of
+            relaxation, nature, and unique cultural experiences.
+          </p>
+          <p>
+            The island offers countless things to see—rice terraces,
+            waterfalls, street food, local craft markets, and small villages
+            full of traditional architecture. There’s also a thriving yoga and
+            meditation culture.
+          </p>
+        </article>
 
-      <p>
-        The island offers countless things to see—rice terraces, waterfalls,
-        street food, local craft markets, and small villages full of traditional
-        architecture. There's also a thriving yoga and meditation culture.
-      </p>
+        <article class="bali-column">
+          <h2>What I Want to Experience</h2>
+          <ul>
+            <li>Ubud’s rice terraces and art markets</li>
+            <li>The beaches of Uluwatu and Seminyak</li>
+            <li>Monkey Forest Sanctuary</li>
+            <li>Balinese temples like Tanah Lot and Ulun Danu</li>
+          </ul>
 
-      <h2 class="bali-h2">What I Want to Experience</h2>
-      <ul>
-        <li>Ubud’s rice terraces and art markets</li>
-        <li>The beaches of Uluwatu and Seminyak</li>
-        <li>Monkey Forest Sanctuary</li>
-        <li>Balinese temples like Tanah Lot and Ulun Danu</li>
-      </ul>
+          <h3>Travel Notes</h3>
+          <p>
+            Bali seems like the kind of place where each day can shift between
+            calm and adventure. I’d want to spend the mornings exploring quiet
+            temples, the afternoons by the ocean, and the evenings trying local
+            food or watching traditional dance performances.
+          </p>
+        </article>
+      </section>
+      <!-- Photo grid for Bali -->
+      <section>
+        <h2>Bali Photo Journal</h2>
+        <div class="photo-grid">
+          <img
+            src="Images/bali/bali-rice-terraces.jpg"
+            alt="Green rice terraces at sunrise in Bali"
+          />
+          <img
+            src="Images/bali/bali-temple.jpg"
+            alt="Balinese temple near the water"
+          />
+          <img
+            src="Images/bali/bali-waterfall.jpg"
+            alt="Waterfall surrounded by tropical plants"
+          />
+          <img
+            src="Images/bali/bali-beach-sunset.jpg"
+            alt="Beach in Bali with a colorful sunset sky"
+          />
+        </div>
+      </section>
+        <section class="fact-box">
+        <p>
+          Did you know? Bali is sometimes called the “Island of the Gods”
+          because of its many temples and spiritual traditions.
+        </p>
+      </section>
 
-      <h2 class="bali-h2">Travel Notes</h2>
-      <p>
-        Bali seems like the kind of place where each day can shift between calm
-        and adventure. I'd want to spend the mornings exploring quiet temples,
-        the afternoons by the ocean, and the evenings trying local food or
-        watching traditional dance performances.
-      </p>
-
-      <p>
-        More planning will come later, but for now I’ve added enough content to
-        fill the page while I keep learning about this beautiful island.
-      </p>
+        <section class="itinerary">
+        <h2>My Perfect Day in Bali</h2>
+        <p>
+          Morning walk through rice terraces in Ubud, afternoon relaxing at the
+          beach, sunset at a cliffside temple, and an evening trying local food
+          at a night market.
+        </p>
+      </section>
     </main>
 
     <footer>
