--- a/paris.html
+++ b/paris.html
@@ -123,7 +123,7 @@
         </p>
         <p>
           For now, this section is a place for rough notes, half-formed plans,
-          and inspiration — enough text to keep the page full and readable while
+          and inspiration enough text to keep the page full and readable while
           I keep researching and dreaming about a future trip.
         </p>
       </section>
