--- a/bali.html
+++ b/bali.html
@@ -34,7 +34,7 @@
     <main>
       <div class="hero">
         <img
-          src="bali.jpg"
+          src="Images/bali/Bali.jpg"
           alt="Bali beach with palm trees and sunset"
           class="hero-image"
         />
