--- a/paris.html
+++ b/paris.html
@@ -34,7 +34,7 @@
     <main>
       <div class="hero">
         <img
-          src="paris.jpg"
+          src="Images/paris/Paris.jpg"
           alt="Paris cityscape with the Eiffel Tower in the background"
           class="hero-image"
         />
