--- a/tokyo.html
+++ b/tokyo.html
@@ -34,7 +34,7 @@
     <main>
       <div class="hero">
         <img
-          src="tokyo.jpg"
+          src="Images/tokyo/Tokyo.jpg"
           alt="Tokyo cityscape with Mount Fuji in the background"
           class="hero-image"
         />
