fixed incorrect pathing

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="location-card">
           <div>
             <img
-              src="/Images/tokyo/Toyko-1.jpg"
+              src="Images/tokyo/Tokyo-1.jpg"
               alt="Tokyo cityscape with Mount Fuji in the background"
               width="450"
               height="450"
@@ -99,7 +99,7 @@
         <div class="location-card">
           <div>
             <img
-              src="/Images/paris/Paris-1.jpg"
+              src="Images/paris/Paris-1.jpg"
               alt="Paris cityscape with the Eiffel Tower in the background"
               width="450"
               height="450"
@@ -123,7 +123,7 @@
         <div class="location-card">
           <div>
             <img
-              src="/Images/bali/Bali-1.jpg"
+              src="Images/bali/Bali-1.jpg"
               alt="Bali at sunset"
               width="450"
               height="450"
