fixed logo typo

--- a/bali.html
+++ b/bali.html
@@ -12,7 +12,7 @@
       <nav class="nav-bar">
         <img
           class="nav-logo"
-          src="Logo.png"
+          src="logo.png"
           alt="Logo: Airplane flying around a globe"
           width="120px"
           height="120px"
@@ -50,7 +50,7 @@
           scenery at my own pace.
         </p>
       </section>
-       <section class="bali-layout">
+      <section class="bali-layout">
         <article class="bali-column">
           <h2>Why Bali?</h2>
           <p>
@@ -59,9 +59,9 @@
             relaxation, nature, and unique cultural experiences.
           </p>
           <p>
-            The island offers countless things to see—rice terraces,
-            waterfalls, street food, local craft markets, and small villages
-            full of traditional architecture. There’s also a thriving yoga and
+            The island offers countless things to see—rice terraces, waterfalls,
+            street food, local craft markets, and small villages full of
+            traditional architecture. There’s also a thriving yoga and
             meditation culture.
           </p>
         </article>
@@ -106,14 +106,14 @@
           />
         </div>
       </section>
-        <section class="fact-box">
+      <section class="fact-box">
         <p>
           Did you know? Bali is sometimes called the “Island of the Gods”
           because of its many temples and spiritual traditions.
         </p>
       </section>
 
-        <section class="itinerary">
+      <section class="itinerary">
         <h2>My Perfect Day in Bali</h2>
         <p>
           Morning walk through rice terraces in Ubud, afternoon relaxing at the
