fixed logo typo

--- a/paris.html
+++ b/paris.html
@@ -12,7 +12,7 @@
       <nav class="nav-bar">
         <img
           class="nav-logo"
-          src="Logo.png"
+          src="logo.png"
           alt="Logo: Airplane flying around a globe"
           width="120px"
           height="120px"
