fixed more typos

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="location-card">
           <div>
             <img
-              src="Images/tokyo/Tokyo-1.jpg"
+              src="Images/tokyo/Toyko-1.jpg"
               alt="Tokyo cityscape with Mount Fuji in the background"
               width="450"
               height="450"
