--- a/tokyo.html
+++ b/tokyo.html
@@ -12,7 +12,7 @@
       <nav class="nav-bar">
         <img
           class="nav-logo"
-          src="Logo.png"
+          src="logo.png"
           alt="Logo: Airplane flying around a globe"
           width="120px"
           height="120px"
@@ -34,7 +34,7 @@
     <main>
       <div class="hero">
         <img
-          src="Images/tokyo/Tokyo.jpg"
+          src="Images/tokyo/tokyo.jpg"
           alt="Tokyo cityscape with Mount Fuji in the background"
           class="hero-image"
         />
